<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ll_parent_location"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_white_top_rad_8"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size55"
        android:layout_marginTop="@dimen/size55"
        android:layout_marginEnd="@dimen/size55"
        android:minHeight="@dimen/size191"
        app:srcCompat="@drawable/ic_location_tracking_image" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size19"
        android:layout_marginTop="@dimen/size12"
        android:layout_marginEnd="@dimen/size18"
        android:fontFamily="@font/lato"
        android:gravity="center_horizontal"
        android:text="@string/allow_gigforce_to_access_this_device_s_location"
        android:textColor="#333333"
        android:textSize="@dimen/font16"
        android:textStyle="normal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size42"
        android:layout_marginTop="@dimen/size7"
        android:layout_marginEnd="@dimen/size41"
        android:fontFamily="@font/lato"

        android:gravity="center_horizontal"
        android:text="@string/your_location_details_will_help_us_find_you_best_gig_near_you"
        android:textColor="@color/warm_grey"
        android:textSize="@dimen/font14"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/tv_allow_access"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size16"
        android:layout_marginTop="@dimen/size16"
        android:layout_marginEnd="@dimen/size16"
        android:layout_marginBottom="@dimen/size40"
        android:background="@drawable/rect_bg_rad_rad_5_sg_e42c64_eg_990077"
        android:gravity="center_horizontal"
        android:minHeight="@dimen/size36"
        android:paddingTop="@dimen/size14"
        android:paddingBottom="@dimen/size13"
        android:text="@string/allow_access_location"
        android:textColor="@color/white"
        android:textSize="@dimen/font18"
        app:layout_constraintBottom_toBottomOf="parent" />

</LinearLayout>